# cpdf-cc-bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  QUICKSTART.md  SECURITY.md  diagram-prompt.md
src/tgbridge/: __init__.py  a2a.py  app.py  cli.py  config.py  hooks_install.py  hooks_receiver.py  notifier.py  providers.py  router.py  scaffold.py  scheduler.py  state.py  telegram_io.py  tmux.py  transcribe.py
src/tgbridge/templates/: AGENTS.md  BOOTSTRAP.md  CLAUDE.md  Dockerfile  HEARTBEAT.md  IDENTITY.md  README.md  SOUL.md  TOOLS.md  USER.md  agents-registry.json  claude-settings.json  docker-compose.yml  dockerignore  entrypoint.sh  env.example  workspace.gitignore
src/tgbridge/templates/memory/: INDEX.md
src/tgbridge/templates/memory/topics/: _TEMPLATE.md
src/tgbridge/templates/projects/: INDEX.md  _CATEGORY_INDEX.md  _PROJECT_README.md
src/tgbridge/templates/projects/leads/: INDEX.md
src/tgbridge/templates/scripts/: backup-data.sh  regen-indexes.sh
src/tgbridge/templates/skills/call-agent/: SKILL.md
src/tgbridge/templates/skills/call-agent/scripts/: agent.py
src/tgbridge/templates/skills/scheduler/: SKILL.md
src/tgbridge/templates/skills/scheduler/scripts/: schedule.py
src/tgbridge/templates/whisper/: Dockerfile  README.md  app.py  docker-compose.yml  env.example  pyproject.toml
tests/: test_a2a.py  test_hooks_receiver.py  test_notifier.py  test_router.py  test_scaffold.py  test_scheduler.py  test_tmux.py  test_transcribe.py  test_whisper.py
