[project]
name = "bk-claude-bridge"
version = "0.1.0"
description = "Bridge leve entre Telegram e uma sessão interativa de agente CLI (Claude Code) em tmux"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Better Knowledge" }]
keywords = ["telegram", "claude", "claude-code", "tmux", "bridge", "bot", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "python-telegram-bot>=21,<22",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "apscheduler>=3.10,<4",
    "sqlalchemy>=2.0",
    "tzdata>=2024.1",
    "telegramify-markdown>=0.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
voice-openai = ["openai>=1.0"]
voice-local = ["faster-whisper>=1.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "python-multipart>=0.0.9"]  # multipart: testar o template whisper

[project.urls]
Homepage = "https://github.com/Better-Knowledge/bk-claude-bridge"
Repository = "https://github.com/Better-Knowledge/bk-claude-bridge"
Issues = "https://github.com/Better-Knowledge/bk-claude-bridge/issues"
Changelog = "https://github.com/Better-Knowledge/bk-claude-bridge/blob/main/CHANGELOG.md"

[project.scripts]
tgbridge = "tgbridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tgbridge"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
